--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,196 @@
-<!doctype html>
-<html lang="de">
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Neighborly</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <!-- Loading Screen with animated N logo -->
+      <div
+        style="
+          min-height: 100vh;
+          background: linear-gradient(135deg, #f9fafb 0%, #dbeafe 100%);
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+          font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+            sans-serif;
+        "
+      >
+        <!-- Animated N Logo -->
+        <div
+          style="
+            width: 96px;
+            height: 96px;
+            position: relative;
+            margin-bottom: 24px;
+          "
+        >
+          <!-- Outer ring -->
+          <div
+            style="
+              position: absolute;
+              inset: 0;
+              border-radius: 50%;
+              border: 2px solid #e5e7eb;
+              animation: pulse 2s ease-in-out infinite;
+            "
+          ></div>
+
+          <!-- Rotating gradient ring -->
+          <div
+            style="
+              position: absolute;
+              inset: 0;
+              border-radius: 50%;
+              background: conic-gradient(from 0deg, #3b82f6, #8b5cf6, #3b82f6);
+              mask: radial-gradient(
+                circle at center,
+                transparent 70%,
+                black 72%
+              );
+              -webkit-mask: radial-gradient(
+                circle at center,
+                transparent 70%,
+                black 72%
+              );
+              animation: spin 2s linear infinite;
+            "
+          ></div>
+
+          <!-- Center N Logo -->
+          <div
+            style="
+              position: absolute;
+              inset: 0;
+              display: flex;
+              align-items: center;
+              justify-content: center;
+            "
+          >
+            <div
+              style="
+                width: 80%;
+                height: 80%;
+                background: linear-gradient(135deg, #3b82f6, #8b5cf6);
+                border-radius: 12px;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
+                animation: float 2s ease-in-out infinite alternate;
+              "
+            >
+              <span style="color: white; font-weight: bold; font-size: 24px"
+                >N</span
+              >
+            </div>
+          </div>
+        </div>
+
+        <!-- Loading text -->
+        <h2
+          style="
+            font-size: 24px;
+            font-weight: 600;
+            color: #374151;
+            margin: 0 0 8px 0;
+            animation: pulse 2s ease-in-out infinite;
+          "
+        >
+          Neighborly wird geladen
+        </h2>
+
+        <p
+          style="
+            color: #6b7280;
+            font-size: 16px;
+            margin: 0 0 24px 0;
+            animation: pulse 2s ease-in-out infinite;
+            animation-delay: 0.5s;
+          "
+        >
+          Einen Moment bitte...
+        </p>
+
+        <!-- Loading dots -->
+        <div style="display: flex; gap: 4px">
+          <div
+            style="
+              width: 8px;
+              height: 8px;
+              background: #3b82f6;
+              border-radius: 50%;
+              animation: bounce 1.4s ease-in-out infinite both;
+            "
+          ></div>
+          <div
+            style="
+              width: 8px;
+              height: 8px;
+              background: #3b82f6;
+              border-radius: 50%;
+              animation: bounce 1.4s ease-in-out infinite both;
+              animation-delay: 0.16s;
+            "
+          ></div>
+          <div
+            style="
+              width: 8px;
+              height: 8px;
+              background: #3b82f6;
+              border-radius: 50%;
+              animation: bounce 1.4s ease-in-out infinite both;
+              animation-delay: 0.32s;
+            "
+          ></div>
+        </div>
+      </div>
+
+      <style>
+        @keyframes spin {
+          from {
+            transform: rotate(0deg);
+          }
+          to {
+            transform: rotate(360deg);
+          }
+        }
+
+        @keyframes float {
+          0% {
+            transform: translateY(0px) scale(1);
+          }
+          100% {
+            transform: translateY(-4px) scale(1.05);
+          }
+        }
+
+        @keyframes pulse {
+          0%,
+          100% {
+            opacity: 1;
+          }
+          50% {
+            opacity: 0.7;
+          }
+        }
+
+        @keyframes bounce {
+          0%,
+          80%,
+          100% {
+            transform: scale(0);
+          }
+          40% {
+            transform: scale(1);
+          }
+        }
+      </style>
+    </div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
